--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <br>
       <a class="fa fa-facebook" href="https://www.facebook.com/profile.php?id=100013003686335"></a>
       <a class="fa fa-twitter" href="https://twitter.com/GauravJ49069883"></a>
-      <a class="fa fa-google" href="https://www.appbrewery.co/"></a>
+      <a class="fa fa-google" href="https://gauravjha3298.github.io/mysite/"></a>
         <a class="fa fa-instagram" href="https://www.instagram.com/gauravjha55321/"></a>
       <p>©GAURAV KUMAR</p>
     </div>
